# python-scripting-interface

./: CMakeLists.txt  PythonScriptingInterfaceConfig.cmake.in
src/: PythonBinding.cpp  pythonobject.cpp
